<resources>
    <string name="app_name">SGVMobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Martín Norton</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="inicio">inicio</string>
    <string name="perfil">perfil</string>
    <string name="logout">logout\n</string>
    <string name="mascotas">mascotas</string>
    <string name="turnos">Turnos</string>
    <string name="consultas">Consultas</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="mis_mascotas">Mis Mascotas</string>
    <string name="ubicaci_n_de_la_veterinaria">Ubicación de la Veterinaria</string>
    <string name="pantallaInicio">Donde nos encontramos</string>
    <string name="pantallaPerfil">Mis datos</string>
    <string name="pantallaMascotas">Mis mascotas</string>
    <string name="pantallaLogout">Salir</string>
    <string name="pantallaDetalleMascota">Detalles de la mascota</string>
    <string name="vacunas_y_otros">Vacunas y otros</string>
    <string name="vacunas_y_otros_tratamientos">Vacunas y otros tratamientos</string>
    <string name="promos_y_noticias">Promos y Noticias</string>
</resources>