<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.tec.sgvmobile.ui.inicio.InicioFragment"
        android:label="@string/pantallaInicio"
        tools:layout="@layout/fragment_inicio2" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.tec.sgvmobile.ui.perfil.PerfilFragment"
        android:label="@string/pantallaPerfil"
        tools:layout="@layout/fragment_perfil" >
    </fragment>

    <fragment
        android:id="@+id/nav_mascotas"
        android:name="com.tec.sgvmobile.ui.mascotas.MascotasFragment"
        android:label="@string/pantallaMascotas"
        tools:layout="@layout/fragment_mascotas" >
        <action
            android:id="@+id/action_nav_mascotas_to_detalleMascotaFragment"
            app:destination="@id/detalleMascotaFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.tec.sgvmobile.ui.logout.LogoutFragment"
        android:label="@string/pantallaLogout"
        tools:layout="@layout/activity_logout" />
    <activity
        android:id="@+id/loginActivity"
        android:name="com.tec.sgvmobile.ui.login.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />
    <fragment
        android:id="@+id/detalleMascotaFragment"
        android:name="com.tec.sgvmobile.ui.mascotas.DetalleMascotaFragment"
        android:label="@string/pantallaDetalleMascota" >
        <action
            android:id="@+id/action_detalleMascotaFragment_to_nav_mascotas"
            app:destination="@id/nav_mascotas" />
    </fragment>
    <fragment
        android:id="@+id/crearMascotaFragment"
        android:name="com.tec.sgvmobile.ui.mascotas.CrearMascotaFragment"
        android:label="Nueva mascota" >
        <action
            android:id="@+id/action_crearMascotaFragment_to_nav_mascotas"
            app:destination="@id/nav_mascotas" />
        <action
            android:id="@+id/action_crearMascotaFragment_to_nav_mascotas2"
            app:destination="@id/nav_mascotas" />
    </fragment>
    <fragment
        android:id="@+id/turnosFragment"
        android:name="com.tec.sgvmobile.ui.turnos.TurnosFragment"
        android:label="Mascotas con turnos"
        tools:layout="@layout/fragment_turnos" >
        <action
            android:id="@+id/action_turnosFragment_to_detalleTurnosFragment"
            app:destination="@id/detalleTurnosFragment" />
    </fragment>
    <fragment
        android:id="@+id/detalleTurnosFragment"
        android:name="com.tec.sgvmobile.ui.turnos.DetalleTurnosFragment"
        android:label="Próximos turnos"
        tools:layout="@layout/fragment_detalle_turnos" >
        <action
            android:id="@+id/action_detalleTurnosFragment_to_turnosFragment"
            app:destination="@id/turnosFragment" />
        <action
            android:id="@+id/action_detalleTurnosFragment_to_crearTurnoFragment"
            app:destination="@id/crearTurnoFragment" />
    </fragment>
    <fragment
        android:id="@+id/crearTurnoFragment"
        android:name="com.tec.sgvmobile.ui.turnos.CrearTurnoFragment"
        android:label="Nuevo turno"
        tools:layout="@layout/fragment_crear_turno" >
        <action
            android:id="@+id/action_crearTurnoFragment_to_turnosFragment"
            app:destination="@id/turnosFragment"
            app:popUpTo="@id/turnosFragment"
            app:popUpToInclusive="true" />

    </fragment>
    <fragment
        android:id="@+id/consultasFragment"
        android:name="com.tec.sgvmobile.ui.consultas.ConsultasFragment"
        android:label="Mis consultas"
        tools:layout="@layout/fragment_consultas">
        <action
            android:id="@+id/action_consultasFragment_to_filtrosConsultasFragment"
            app:destination="@id/filtrosConsultasFragment" />
    </fragment>

    <fragment
        android:id="@+id/filtrosConsultasFragment"
        android:name="com.tec.sgvmobile.ui.consultas.FiltrosConsultasFragment"
        android:label="Filtrar consultas"
        tools:layout="@layout/fragment_filtros_consultas">

        <action
            android:id="@+id/action_filtrosConsultasFragment_to_consultasFragment"
            app:destination="@id/consultasFragment" />

        <action
            android:id="@+id/action_filtrosConsultasFragment_to_resultadosBusquedaFragment"
            app:destination="@id/resultadosBusquedaFragment"
            app:popUpTo="@id/consultasFragment"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/resultadosBusquedaFragment"
        android:name="com.tec.sgvmobile.ui.consultas.ResultadosBusquedaFragment"
        android:label="Resultados de búsqueda"
        tools:layout="@layout/fragment_resultados_busqueda" />
    <fragment
        android:id="@+id/misMascotasParaTurnoFragment"
        android:name="com.tec.sgvmobile.ui.turnos.MisMascotasParaTurnoFragment"
        android:label="Seleccione una mascota"
        tools:layout="@layout/fragment_mis_mascotas_para_turno" />
    <fragment
        android:id="@+id/contactoFragment"
        android:name="com.tec.sgvmobile.ui.contacto.ContactoFragment"
        android:label="Contactanos" />
    <fragment
        android:id="@+id/tratamientosFragment"
        android:name="com.tec.sgvmobile.ui.tratamientos.TratamientosFragment"
        android:label="@string/vacunas_y_otros_tratamientos"
        tools:layout="@layout/fragment_tratamientos" >
        <action
            android:id="@+id/action_tratamientosFragment_to_detalleTratamientosFragment"
            app:destination="@id/detalleTratamientosFragment" />
    </fragment>
    <fragment
        android:id="@+id/detalleTratamientosFragment"
        android:name="com.tec.sgvmobile.ui.tratamientos.DetalleTratamientosFragment"
        android:label="@string/vacunas_y_otros_tratamientos"
        tools:layout="@layout/fragment_detalle_tratamientos" >
        <action
            android:id="@+id/action_detalleTratamientosFragment_to_tratamientosFragment"
            app:destination="@id/tratamientosFragment" />
    </fragment>
</navigation>